<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightGray"
    android:clickable="true"
    android:focusable="true"
    tools:context=".view.fragment.RentTermsFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_number_1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/green_circle_bg"
        android:text="1"
        android:textColor="@color/white"
        tools:ignore="HardcodedText,SpUsage" />

    <TextView
        android:id="@+id/text_title_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="@dimen/margin_16dp"
        app:layout_constraintTop_toTopOf="@+id/text_number_1"
        app:layout_constraintStart_toEndOf="@+id/text_number_1"
        app:layout_constraintBottom_toBottomOf="@+id/text_number_1"
        android:gravity="center"
        android:text="@string/book"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_info_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/book_info"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_1" />


    <TextView
        android:id="@+id/text_number_2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@+id/text_info_1"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/green_circle_bg"
        android:text="2"
        android:textColor="@color/white"
        tools:ignore="HardcodedText,SpUsage" />

    <TextView
        android:id="@+id/text_title_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="@dimen/margin_16dp"
        app:layout_constraintTop_toTopOf="@+id/text_number_2"
        app:layout_constraintStart_toEndOf="@+id/text_number_2"
        app:layout_constraintBottom_toBottomOf="@+id/text_number_2"
        android:gravity="center"
        android:text="@string/Inspect_and_receive"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_info_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/Inspect_and_receive_info"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_2" />


    <TextView
        android:id="@+id/text_number_3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@+id/text_info_2"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        android:layout_margin="@dimen/margin_16dp"
        android:background="@drawable/green_circle_bg"
        android:text="3"
        android:textColor="@color/white"
        tools:ignore="HardcodedText,SpUsage" />

    <TextView
        android:id="@+id/text_title_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_margin="@dimen/margin_16dp"
        app:layout_constraintTop_toTopOf="@+id/text_number_3"
        app:layout_constraintStart_toEndOf="@+id/text_number_3"
        app:layout_constraintBottom_toBottomOf="@+id/text_number_3"
        android:gravity="center"
        android:text="@string/use"
        android:textStyle="bold"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/text_info_3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/use_info"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_title_3" />

</androidx.constraintlayout.widget.ConstraintLayout>