<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    tools:context=".view.fragment.MenuFragment">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16dp"
        android:text="@string/menu"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/text_rent_terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_rent_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"
        android:text="@string/rentTerms"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:drawableTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/text_rent_terms" />

    <TextView
        android:id="@+id/text_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"
        android:text="@string/about"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:drawableTint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/text_about" />


    <TextView
        android:id="@+id/text_loge_out"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:paddingStart="@dimen/margin_16dp"
        android:paddingTop="13dp"
        android:paddingEnd="16dp"
        android:paddingBottom="13dp"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/ic_arrow_right"
        app:drawableTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="16dp"
        android:background="@color/gray"
        app:layout_constraintTop_toBottomOf="@+id/text_loge_out" />

</androidx.constraintlayout.widget.ConstraintLayout>