<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightGray"
    android:clickable="true"
    android:focusable="true"
    tools:context=".view.fragment.AboutFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/custom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RippleOut"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@color/white"
        android:elevation="1dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/text_email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:text="@string/e_mail"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_email_title"
            android:text="nersamirxanyan@gmail.com" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_email"
            android:layout_margin="26dp"
            app:tint="@color/appColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/RippleOut"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@color/white"
        android:translationZ="1dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_email">

        <TextView
            android:id="@+id/text_phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_phone_title"
            android:text="+(374) 98-456780" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_phone"
            android:layout_margin="26dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/appColor" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/text_star"
        android:layout_width="match_parent"
        android:padding="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@color/white"
        android:textColor="@color/black"
        style="@style/RippleOut"
        android:gravity="center_vertical"
        android:translationZ="1dp"
        android:drawablePadding="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/layout_phone"
        android:text="@string/star_app"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_star"
        app:drawableTint="@color/appColor" />

    <TextView
        android:id="@+id/text_web_page"
        android:layout_width="match_parent"
        android:padding="@dimen/margin_16dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        style="@style/RippleOut"
        android:translationZ="1dp"
        android:drawablePadding="@dimen/margin_16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_star"
        android:text="@string/page_url"
        android:layout_height="wrap_content"
        app:drawableStartCompat="@drawable/ic_globe"
        app:drawableTint="@color/appColor" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textColor="@color/gray"
        tools:text="@string/version"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_web_page" />

</androidx.constraintlayout.widget.ConstraintLayout>