<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".view.fragment.ConfigureToPayFragment">

        <com.savvi.rangedatepicker.CalendarPickerView
            android:id="@+id/calendar_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            android:clipToPadding="false"
            android:scrollbarStyle="outsideOverlay"
            app:layout_constraintBottom_toTopOf="@+id/scroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1"
            app:tsquare_dayTextColor="@color/black"
            app:tsquare_dividerColor="@color/transparentWhite"
            app:tsquare_headerTextColor="@color/appColor"
            app:tsquare_orientation_horizontal="false"
            app:tsquare_titleTextColor="@color/black" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendar_view"
            app:layout_constraintVertical_weight="1.5">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="100dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/text_selected_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:fontFamily="@font/roboto"
                    android:text="@string/days_number"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/calendar_view" />

                <TextView
                    android:id="@+id/text_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:text="@string/car_price"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_selected_dates" />

                <TextView
                    android:id="@+id/text_additional_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:text="@string/additionalServices"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_price" />


                <CheckBox
                    android:id="@+id/chb_delivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:text="@string/additionalServices"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_price" />

                <CheckBox
                    android:id="@+id/chb_pick_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:text="@string/additionalServices"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_price" />

                <CheckBox
                    android:id="@+id/chb_unlimited_drive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:text="@string/additionalServices"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_price" />

                <CheckBox
                    android:id="@+id/chb_withdraw_franchises"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_8dp"
                    android:text="@string/additionalServices"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_price" />

                <CheckBox
                    android:id="@+id/chb_washing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_margin="@dimen/margin_8dp"
                    android:text="@string/washing"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_price" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_button_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/text_full_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/full_price"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/btn_pay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.dx.dxloadingbutton.lib.LoadingButton
                android:id="@+id/btn_pay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_16dp"
                android:layout_marginBottom="@dimen/margin_16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:lb_btnColor="@color/appRed"
                app:lb_btnDisabledColor="@color/appRed"
                app:lb_btnText="@string/pay"
                app:lb_cornerRadius="32dp"
                app:lb_disabledTextColor="@color/white"
                app:lb_resetAfterFailed="true"
                app:lb_rippleEnable="false"
                app:lb_textColor="@color/white" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>